--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "jshint --exclude='node_modules/' *.js",
+    "test": "npm run lint"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jshint": "^2.12.0",
     "mongodb": "^3.6.3",
     "socket.io": "^3.1.0"
   }
