--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "lint": "jshint --exclude='node_modules/' *.js",
+    "lint": "jshint --exclude='node_modules/' *.js server/*.js server/chess/*.js",
     "test": "npm run lint"
   },
   "repository": {
@@ -17,7 +17,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jshint": "^2.12.0",
+    "jshint": "^2.4.0",
     "mongodb": "^3.6.3",
     "socket.io": "^3.1.0"
   }
