--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "lint": "jshint --exclude='node_modules/' *.js server/*.js server/chess/*.js",
+    "lint": "jshint --exclude='node_modules/' *.js server/*.js server/chess/*.js static/*.js",
     "test": "npm run lint"
   },
   "repository": {
